<resources>
    <string name="app_name">TrailBlaze</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_about">About Us</string>
    <string name="title_activity_trainer_trail_list">Trainer Trail List</string>
    <string name="button">Trainer Trail List</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_trail">Add Trail</string>
    <string name="action_del_trail">Del Trail</string>
    <string name="title_activity_main2">Participant</string>
    <string name="title_activity_participant_trail_station">ParticipantTrailStation</string>
    <string name="tab_text_1">Task</string>
    <string name="tab_text_2">Upload</string>
    <string name="tab_text_3">Discuss</string>
    <string name="tab_text_4">Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="instructionTitle">Instruction:</string>
    <string name="instructionText" />
    <string name="locationText">Station Name:</string>
    <string name="live_activities">Live Activities</string>
    <string name="discussionText">Discussion</string>

    <string name="FacebookAppId">1884500165169162</string>
    <string name="facebook_app_id">1884500165169162</string>
    <string name="fb_login_protocol_scheme">fb1884500165169162</string>
    <string name="action_switch_role">Switch Role</string>
    <string name="todo">logo</string>
    <string name="fblogin">Facebook Login</string>
    <string name="googlelogin">Google Login</string>
    <string name="sendingButton">Send</string>
    <string name="ptcp_station_name" />
    <string name="prompt_trail_name">Trail Name</string>
    <string name="prompt_trail_date_ddmmyy">Trail Date ddMMYY</string>
    <string name="add_trail">Add New Trail</string>
    <string name="add_trail_station">Add New Trail Station</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="title_activity_maps">Map</string>
</resources>
