<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_trail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".activity.AddTrailActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25sp"
        android:id="@+id/tv_add_trail_title"
        android:textColor="@color/colorPrimaryDark"
        android:text="ADD TRAIL"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_centerInParent="true"
        android:id="@+id/ll_add_trail_view"
        android:orientation="vertical">


        <EditText
            android:id="@+id/trail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_trail_name"
            android:maxLines="1"
            android:singleLine="true" />


        <EditText
            android:id="@+id/trail_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/prompt_trail_date_ddmmyy"
            android:inputType="number" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:id="@+id/btn_add_trail"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/White"
            android:text="@string/add_trail"/>
        </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:id="@+id/cv_trail_station">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="10dp"
            android:gravity="center">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_station"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginLeft="20dp"
                android:text="Add Trail Station"/>
        </LinearLayout>


    </android.support.v7.widget.CardView>
    <ProgressBar
        android:id="@+id/pb_add_trail"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
</RelativeLayout>
